[package]
name = "remarkable"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
clap = { version = "4.5.31", features = ["derive"] }
pulldown-cmark = "0.13.0"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
